// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tabs/demo/basic.md correctly 1`] = `
<div
  class="wmstool-tabs wmstool-tabs-top wmstool-tabs-line"
>
  <div
    class="wmstool-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="wmstool-tabs-nav-container"
    >
      <span
        class="wmstool-tabs-tab-prev wmstool-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="wmstool-tabs-tab-prev-icon"
        />
      </span>
      <span
        class="wmstool-tabs-tab-next wmstool-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="wmstool-tabs-tab-next-icon"
        />
      </span>
      <div
        class="wmstool-tabs-nav-wrap"
      >
        <div
          class="wmstool-tabs-nav-scroll"
        >
          <div
            class="wmstool-tabs-nav wmstool-tabs-nav-animated"
          >
            <div
              class="wmstool-tabs-ink-bar wmstool-tabs-ink-bar-animated"
            />
            <div
              aria-disabled="false"
              aria-selected="true"
              class="wmstool-tabs-tab-active wmstool-tabs-tab"
              role="tab"
            >
              Tab 1
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" wmstool-tabs-tab"
              role="tab"
            >
              Tab 2
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" wmstool-tabs-tab"
              role="tab"
            >
              Tab 3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-tabs-content wmstool-tabs-content-animated"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of Tab Pane 1
    </div>
    <div
      aria-hidden="true"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/card.md correctly 1`] = `
<div
  class="wmstool-tabs wmstool-tabs-top wmstool-tabs-card wmstool-tabs-no-animation"
>
  <div
    class="wmstool-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="wmstool-tabs-nav-container"
    >
      <span
        class="wmstool-tabs-tab-prev wmstool-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="wmstool-tabs-tab-prev-icon"
        />
      </span>
      <span
        class="wmstool-tabs-tab-next wmstool-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="wmstool-tabs-tab-next-icon"
        />
      </span>
      <div
        class="wmstool-tabs-nav-wrap"
      >
        <div
          class="wmstool-tabs-nav-scroll"
        >
          <div
            class="wmstool-tabs-nav wmstool-tabs-nav-animated"
          >
            <div
              class="wmstool-tabs-ink-bar wmstool-tabs-ink-bar-animated"
            />
            <div
              aria-disabled="false"
              aria-selected="true"
              class="wmstool-tabs-tab-active wmstool-tabs-tab"
              role="tab"
            >
              Tab 1
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" wmstool-tabs-tab"
              role="tab"
            >
              Tab 2
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" wmstool-tabs-tab"
              role="tab"
            >
              Tab 3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-tabs-content wmstool-tabs-content-no-animated"
  >
    <div
      aria-hidden="false"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of Tab Pane 1
    </div>
    <div
      aria-hidden="true"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/card-top.md correctly 1`] = `
<div
  class="card-container"
>
  <div
    class="wmstool-tabs wmstool-tabs-top wmstool-tabs-card wmstool-tabs-no-animation"
  >
    <div
      class="wmstool-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="wmstool-tabs-nav-container"
      >
        <span
          class="wmstool-tabs-tab-prev wmstool-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="wmstool-tabs-tab-prev-icon"
          />
        </span>
        <span
          class="wmstool-tabs-tab-next wmstool-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="wmstool-tabs-tab-next-icon"
          />
        </span>
        <div
          class="wmstool-tabs-nav-wrap"
        >
          <div
            class="wmstool-tabs-nav-scroll"
          >
            <div
              class="wmstool-tabs-nav wmstool-tabs-nav-animated"
            >
              <div
                class="wmstool-tabs-ink-bar wmstool-tabs-ink-bar-animated"
              />
              <div
                aria-disabled="false"
                aria-selected="true"
                class="wmstool-tabs-tab-active wmstool-tabs-tab"
                role="tab"
              >
                Tab Title 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab Title 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab Title 3
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="wmstool-tabs-content wmstool-tabs-content-no-animated"
    >
      <div
        aria-hidden="false"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-active"
        role="tabpanel"
      >
        <p>
          Content of Tab Pane 1
        </p>
        <p>
          Content of Tab Pane 1
        </p>
        <p>
          Content of Tab Pane 1
        </p>
      </div>
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/custom-add-trigger.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    <button
      class="wmstool-btn"
      type="button"
    >
      <span>
        ADD
      </span>
    </button>
  </div>
  <div
    class="wmstool-tabs wmstool-tabs-top wmstool-tabs-card wmstool-tabs-editable-card wmstool-tabs-no-animation"
  >
    <div
      class="wmstool-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="wmstool-tabs-nav-container"
      >
        <span
          class="wmstool-tabs-tab-prev wmstool-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="wmstool-tabs-tab-prev-icon"
          />
        </span>
        <span
          class="wmstool-tabs-tab-next wmstool-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="wmstool-tabs-tab-next-icon"
          />
        </span>
        <div
          class="wmstool-tabs-nav-wrap"
        >
          <div
            class="wmstool-tabs-nav-scroll"
          >
            <div
              class="wmstool-tabs-nav wmstool-tabs-nav-animated"
            >
              <div
                class="wmstool-tabs-ink-bar wmstool-tabs-ink-bar-animated"
              />
              <div
                aria-disabled="false"
                aria-selected="true"
                class="wmstool-tabs-tab-active wmstool-tabs-tab"
                role="tab"
              >
                <div>
                  Tab 1
                  <i
                    class="anticon anticon-close"
                  />
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                <div>
                  Tab 2
                  <i
                    class="anticon anticon-close"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="wmstool-tabs-content wmstool-tabs-content-no-animated"
    >
      <div
        aria-hidden="false"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of Tab Pane 1
      </div>
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/disabled.md correctly 1`] = `
<div
  class="wmstool-tabs wmstool-tabs-top wmstool-tabs-line"
>
  <div
    class="wmstool-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="wmstool-tabs-nav-container"
    >
      <span
        class="wmstool-tabs-tab-prev wmstool-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="wmstool-tabs-tab-prev-icon"
        />
      </span>
      <span
        class="wmstool-tabs-tab-next wmstool-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="wmstool-tabs-tab-next-icon"
        />
      </span>
      <div
        class="wmstool-tabs-nav-wrap"
      >
        <div
          class="wmstool-tabs-nav-scroll"
        >
          <div
            class="wmstool-tabs-nav wmstool-tabs-nav-animated"
          >
            <div
              class="wmstool-tabs-ink-bar wmstool-tabs-ink-bar-animated"
            />
            <div
              aria-disabled="false"
              aria-selected="true"
              class="wmstool-tabs-tab-active wmstool-tabs-tab"
              role="tab"
            >
              Tab 1
            </div>
            <div
              aria-disabled="true"
              aria-selected="false"
              class=" wmstool-tabs-tab wmstool-tabs-tab-disabled"
              role="tab"
            >
              Tab 2
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" wmstool-tabs-tab"
              role="tab"
            >
              Tab 3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-tabs-content wmstool-tabs-content-animated"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-active"
      role="tabpanel"
    >
      Tab 1
    </div>
    <div
      aria-hidden="true"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/editable-card.md correctly 1`] = `
<div
  class="wmstool-tabs wmstool-tabs-top wmstool-tabs-card wmstool-tabs-editable-card wmstool-tabs-no-animation"
>
  <div
    class="wmstool-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="wmstool-tabs-extra-content"
      style="float:right"
    >
      <span>
        <i
          class="anticon anticon-plus wmstool-tabs-new-tab"
        />
      </span>
    </div>
    <div
      class="wmstool-tabs-nav-container"
    >
      <span
        class="wmstool-tabs-tab-prev wmstool-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="wmstool-tabs-tab-prev-icon"
        />
      </span>
      <span
        class="wmstool-tabs-tab-next wmstool-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="wmstool-tabs-tab-next-icon"
        />
      </span>
      <div
        class="wmstool-tabs-nav-wrap"
      >
        <div
          class="wmstool-tabs-nav-scroll"
        >
          <div
            class="wmstool-tabs-nav wmstool-tabs-nav-animated"
          >
            <div
              class="wmstool-tabs-ink-bar wmstool-tabs-ink-bar-animated"
            />
            <div
              aria-disabled="false"
              aria-selected="true"
              class="wmstool-tabs-tab-active wmstool-tabs-tab"
              role="tab"
            >
              <div>
                Tab 1
                <i
                  class="anticon anticon-close"
                />
              </div>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" wmstool-tabs-tab"
              role="tab"
            >
              <div>
                Tab 2
                <i
                  class="anticon anticon-close"
                />
              </div>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" wmstool-tabs-tab"
              role="tab"
            >
              <div
                class="wmstool-tabs-tab-unclosable"
              >
                Tab 3
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-tabs-content wmstool-tabs-content-no-animated"
  >
    <div
      aria-hidden="false"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of Tab 1
    </div>
    <div
      aria-hidden="true"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/extra.md correctly 1`] = `
<div
  class="wmstool-tabs wmstool-tabs-top wmstool-tabs-line"
>
  <div
    class="wmstool-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="wmstool-tabs-extra-content"
      style="float:right"
    >
      <button
        class="wmstool-btn"
        type="button"
      >
        <span>
          Extra Action
        </span>
      </button>
    </div>
    <div
      class="wmstool-tabs-nav-container"
    >
      <span
        class="wmstool-tabs-tab-prev wmstool-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="wmstool-tabs-tab-prev-icon"
        />
      </span>
      <span
        class="wmstool-tabs-tab-next wmstool-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="wmstool-tabs-tab-next-icon"
        />
      </span>
      <div
        class="wmstool-tabs-nav-wrap"
      >
        <div
          class="wmstool-tabs-nav-scroll"
        >
          <div
            class="wmstool-tabs-nav wmstool-tabs-nav-animated"
          >
            <div
              class="wmstool-tabs-ink-bar wmstool-tabs-ink-bar-animated"
            />
            <div
              aria-disabled="false"
              aria-selected="true"
              class="wmstool-tabs-tab-active wmstool-tabs-tab"
              role="tab"
            >
              Tab 1
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" wmstool-tabs-tab"
              role="tab"
            >
              Tab 2
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" wmstool-tabs-tab"
              role="tab"
            >
              Tab 3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-tabs-content wmstool-tabs-content-animated"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of tab 1
    </div>
    <div
      aria-hidden="true"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/icon.md correctly 1`] = `
<div
  class="wmstool-tabs wmstool-tabs-top wmstool-tabs-line"
>
  <div
    class="wmstool-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="wmstool-tabs-nav-container"
    >
      <span
        class="wmstool-tabs-tab-prev wmstool-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="wmstool-tabs-tab-prev-icon"
        />
      </span>
      <span
        class="wmstool-tabs-tab-next wmstool-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="wmstool-tabs-tab-next-icon"
        />
      </span>
      <div
        class="wmstool-tabs-nav-wrap"
      >
        <div
          class="wmstool-tabs-nav-scroll"
        >
          <div
            class="wmstool-tabs-nav wmstool-tabs-nav-animated"
          >
            <div
              class="wmstool-tabs-ink-bar wmstool-tabs-ink-bar-animated"
            />
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" wmstool-tabs-tab"
              role="tab"
            >
              <span>
                <i
                  class="anticon anticon-apple"
                />
                Tab 1
              </span>
            </div>
            <div
              aria-disabled="false"
              aria-selected="true"
              class="wmstool-tabs-tab-active wmstool-tabs-tab"
              role="tab"
            >
              <span>
                <i
                  class="anticon anticon-android"
                />
                Tab 2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wmstool-tabs-content wmstool-tabs-content-animated"
    style="margin-left:-100%"
  >
    <div
      aria-hidden="true"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="false"
      class="wmstool-tabs-tabpane wmstool-tabs-tabpane-active"
      role="tabpanel"
    >
      Tab 2
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/position.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    Tab position：
    <div
      class="wmstool-select wmstool-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="wmstool-select-selection
            wmstool-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="wmstool-select-selection__rendered"
        >
          <div
            class="wmstool-select-selection-selected-value"
            style="display:block;opacity:1"
            title="top"
          >
            top
          </div>
        </div>
        <span
          class="wmstool-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          <b />
        </span>
      </div>
    </div>
  </div>
  <div
    class="wmstool-tabs wmstool-tabs-top wmstool-tabs-line"
  >
    <div
      class="wmstool-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="wmstool-tabs-nav-container"
      >
        <span
          class="wmstool-tabs-tab-prev wmstool-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="wmstool-tabs-tab-prev-icon"
          />
        </span>
        <span
          class="wmstool-tabs-tab-next wmstool-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="wmstool-tabs-tab-next-icon"
          />
        </span>
        <div
          class="wmstool-tabs-nav-wrap"
        >
          <div
            class="wmstool-tabs-nav-scroll"
          >
            <div
              class="wmstool-tabs-nav wmstool-tabs-nav-animated"
            >
              <div
                class="wmstool-tabs-ink-bar wmstool-tabs-ink-bar-animated"
              />
              <div
                aria-disabled="false"
                aria-selected="true"
                class="wmstool-tabs-tab-active wmstool-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="wmstool-tabs-content wmstool-tabs-content-animated"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of Tab 1
      </div>
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/size.md correctly 1`] = `
<div>
  <div
    class="wmstool-radio-group"
    style="margin-bottom:16px"
  >
    <label
      class="wmstool-radio-button-wrapper wmstool-radio-button-wrapper-checked"
    >
      <span
        class="wmstool-radio-button wmstool-radio-button-checked"
      >
        <input
          checked=""
          class="wmstool-radio-button-input"
          type="radio"
        />
        <span
          class="wmstool-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
    <label
      class="wmstool-radio-button-wrapper"
    >
      <span
        class="wmstool-radio-button"
      >
        <input
          class="wmstool-radio-button-input"
          type="radio"
        />
        <span
          class="wmstool-radio-button-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="wmstool-radio-button-wrapper"
    >
      <span
        class="wmstool-radio-button"
      >
        <input
          class="wmstool-radio-button-input"
          type="radio"
        />
        <span
          class="wmstool-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
  </div>
  <div
    class="wmstool-tabs wmstool-tabs-top wmstool-tabs-small wmstool-tabs-line"
  >
    <div
      class="wmstool-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="wmstool-tabs-nav-container"
      >
        <span
          class="wmstool-tabs-tab-prev wmstool-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="wmstool-tabs-tab-prev-icon"
          />
        </span>
        <span
          class="wmstool-tabs-tab-next wmstool-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="wmstool-tabs-tab-next-icon"
          />
        </span>
        <div
          class="wmstool-tabs-nav-wrap"
        >
          <div
            class="wmstool-tabs-nav-scroll"
          >
            <div
              class="wmstool-tabs-nav wmstool-tabs-nav-animated"
            >
              <div
                class="wmstool-tabs-ink-bar wmstool-tabs-ink-bar-animated"
              />
              <div
                aria-disabled="false"
                aria-selected="true"
                class="wmstool-tabs-tab-active wmstool-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="wmstool-tabs-content wmstool-tabs-content-animated"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of tab 1
      </div>
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/slide.md correctly 1`] = `
<div>
  <div
    class="wmstool-radio-group"
    style="margin-bottom:8px"
  >
    <label
      class="wmstool-radio-button-wrapper wmstool-radio-button-wrapper-checked"
    >
      <span
        class="wmstool-radio-button wmstool-radio-button-checked"
      >
        <input
          checked=""
          class="wmstool-radio-button-input"
          type="radio"
        />
        <span
          class="wmstool-radio-button-inner"
        />
      </span>
      <span>
        Horizontal
      </span>
    </label>
    <label
      class="wmstool-radio-button-wrapper"
    >
      <span
        class="wmstool-radio-button"
      >
        <input
          class="wmstool-radio-button-input"
          type="radio"
        />
        <span
          class="wmstool-radio-button-inner"
        />
      </span>
      <span>
        Vertical
      </span>
    </label>
  </div>
  <div
    class="wmstool-tabs wmstool-tabs-top wmstool-tabs-line"
    style="height:220px"
  >
    <div
      class="wmstool-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="wmstool-tabs-nav-container"
      >
        <span
          class="wmstool-tabs-tab-prev wmstool-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="wmstool-tabs-tab-prev-icon"
          />
        </span>
        <span
          class="wmstool-tabs-tab-next wmstool-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="wmstool-tabs-tab-next-icon"
          />
        </span>
        <div
          class="wmstool-tabs-nav-wrap"
        >
          <div
            class="wmstool-tabs-nav-scroll"
          >
            <div
              class="wmstool-tabs-nav wmstool-tabs-nav-animated"
            >
              <div
                class="wmstool-tabs-ink-bar wmstool-tabs-ink-bar-animated"
              />
              <div
                aria-disabled="false"
                aria-selected="true"
                class="wmstool-tabs-tab-active wmstool-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab 4
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab 5
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab 6
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab 7
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab 8
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab 9
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab 10
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" wmstool-tabs-tab"
                role="tab"
              >
                Tab 11
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="wmstool-tabs-content wmstool-tabs-content-animated"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of tab 1
      </div>
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;
